# Kompilatory

./: .gitignore  README.md  grammar.ebnf  parser.y  scanner.l  valid_grammar_examples.md
code_examples/: bad_1.txt  bad_2.txt  good_1.txt  good_2.txt  good_3.txt  new_all_good_examples_from_readme.txt
haskell_out_files/: test.hs
prototype/: CMakeLists.txt  ast.cpp  ast.hpp  clean.sh  clean_and_compile.sh  clean_and_recompile.sh  compile.sh  definition.cpp  env.cpp  env.hpp  error.cpp  error.hpp  main.cpp  parser.y  scanner.l  type.cpp  type.hpp
